--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "aws-rum-web": "^1.14.1",
@@ -17,7 +18,9 @@
     "react-router-dom": "^6.22.3",
     "axios": "^1.6.7",
     "zod": "^3.22.4",
-    "react-fast-marquee": "^1.6.4"
+    "react-fast-marquee": "^1.6.4",
+    "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -33,6 +36,12 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "@babel/preset-typescript": "^7.24.1",
+    "@babel/preset-env": "^7.24.1",
+    "jest-environment-node": "^29.7.0"
   }
 }
